added dragndrop try

--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
          </div> 
 	</div>
 	<div class="globCol3">
-		<div>
-			<canvas class = "drawing"></canvas>
-		</div>
+		<div class="empty">
+            <div class="fill" draggable="true"></div>
+        </div>
+        <div class="empty"></div>
 	</div>
 	<div class="globCol2">
 	<div id="dynMenu">
