dragndrop not in canvas

--- a/index.html
+++ b/index.html
@@ -16,18 +16,15 @@
             <button>Сохранить</button>
             <button>Сбросить</button>
          </div> 
-	</div>
-	<div class="canvasCol">
-	</div>
-	<div class="picturesColj">
         </div>
-        <object id="draggable"
-type="image/svg+xml"
-data="picture.svg">
-<img
-src="picture.png">
-</object>
-        <div id="draggable">Drag This</div>
+        <div id="holst" class="canvasCol">
+                </div>
+                <div class="picturesColj">
+                        <div>
+                        <img id="draggable" src="variable.svg" width="100" height="70" alt="draw variable">
+                        </div>
+                </div>
+	
         <script src="main.js"></script>
 </body>
 </html>
