added maket sample

--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
                         <img id="draggable" src="variable.svg" width="100" height="70" alt="draw variable">
                         </div>
                 </div>
-	
+        <nav>navnavnav</nav>
+        <footer>footfootfoot</footer>
+        <main>mainmainmain</main>
         <script src="main.js"></script>
 </body>
 </html>
