trying to make canvas an object to drag on

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 
             <li class="elementListItem">
                 <h4>Статический массив</h4>
-                <div class="drag">
-                    <img id="yes-drop" class="drag-drop" src="variable.svg" width="100" height="70" alt="draw variable">
-                </div>
+                <img id="columns" class="element" src="variable.svg" draggable=true width="100" height="70"
+                    alt="draw variable">
             </li>
 
             <li class="elementListItem">
@@ -69,14 +68,6 @@
 
     <div id="drawing">
         <div id="outer-dropzone" class="dropzone">
-            <div id="columns">
-                <div class="column" draggable="true">
-                    <header>A</header>
-                </div>
-                <div class="column" draggable="true">
-                    <header>B</header>
-                </div>
-            </div>
         </div>
         <!--div id="picturesCol"-->
         <!--img id="columns" class="column" src="variable.svg" draggable=true width="100" height="70" alt="draw variable"-->
