trying to make canvas an object to drag on

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     </div>
 
     <div id="drawing">
-        <div id="outer-dropzone" class="dropzone">
-        </div>
-        <!--div id="picturesCol"-->
+        <div id="outer-dropzone" class="dropzone"></div>
+        <div id="picturesCol"><img id="columns" class="element" src="variable.svg" draggable=true width="100" height="70"
+            alt="draw variable">
         <!--img id="columns" class="column" src="variable.svg" draggable=true width="100" height="70" alt="draw variable"-->
-        <!--/div-->
+        </div>
         <div id="footer">footer</div>
         <script src="main.js" type="module"></script>
         <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
