--- a/index.html
+++ b/index.html
@@ -1,41 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Algorithm and structure visualisation</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="menu_style.css" />
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 </head>
+
 <body>
-<div id="header">
-    <h1>Визуализация алгоритмов и структур данных</h1>
-</div>
-
-<div id="navigation">
-    <button>Сохранить</button>
-    <button>Сбросить</button>
-</div>
-
-<div id="drawing">
-    <div id="outer-dropzone" class="dropzone"></div>
-    <div id="picturesCol">
-        <ul class="menu">
-            <li>
-                <div>Переменная</div>
-                <img id="vr" src="variable.svg" width="100" height="70" alt="draw variable">
-            </li>
-            <li>
-                <div>Элемент однонаправленного списка</div>
-                <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
-            </li>
-        </ul>
+    <div id="header">
+        <h1>Визуализация алгоритмов и структур данных</h1>
     </div>
-</div>
 
-<div id="footer">footer</div>
+    <div id="navigation">
+        <button>Сохранить</button>
+        <button>Сбросить</button>
+    </div>
 
-<script src="main.js" type="module"></script>
-<script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
+    <div id="drawing">
+        <div id="outer-dropzone" class="dropzone"></div>
+        <div id="picturesCol">
+            <ul class="menu">
+                <li> <!--Чтобы bullet не отрывалась от названия, тут стоит невидимый пробел между словом и bullet-->
+                    <div>&#9773;⠀Переменная</div>
+                    <img id="vr" src="variable.svg" width="100" height="70" alt="draw variable">
+                </li>
+                <li>
+                    <div>&#9773;⠀Элемент однонаправленного списка</div>
+                    <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="footer">footer</div>
+
+    <script src="main.js" type="module"></script>
+    <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
 </body>
+
 </html>
