--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Algorithm and structure visualisation</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="menu_style.css" />
-    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="navigation_style.css" />
 </head>
 
 <body>
@@ -17,15 +17,15 @@
     </div>
 
     <div id="navigation">
-        <button>Сохранить</button>
-        <button>Сбросить</button>
+        <div class="container"><button class="btn btn2">Сбросить</button></div>
     </div>
 
     <div id="drawing">
         <div id="outer-dropzone" class="dropzone"></div>
         <div id="picturesCol">
             <ul class="menu">
-                <li> <!--Чтобы bullet не отрывалась от названия, тут стоит невидимый пробел между словом и bullet-->
+                <li>
+                    <!--Чтобы bullet не отрывалась от названия, тут стоит невидимый пробел между словом и bullet-->
                     <div>&#9773;⠀Переменная</div>
                     <img id="vr" src="variable.svg" width="100" height="70" alt="draw variable">
                 </li>
