Removed unnecessary left column

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
     <title>Algorithm and structure visualisation</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="menu_style.css" />
-    <link rel="stylesheet" href="navigation_style.css" />
+    <link rel="stylesheet" href="footer_style.css" />
 </head>
 
 <body>
     <div id="header">
-        <h1>Визуализация алгоритмов и структур данных</h1>
+        <h2>Визуализация алгоритмов и структур данных</h2>
     </div>
 
     <div id="navigation">
-        <div class="container"><button class="btn btn2">Сбросить</button></div>
+
     </div>
 
     <div id="drawing">
@@ -37,7 +37,11 @@
         </div>
     </div>
 
-    <div id="footer">footer</div>
+    <div id="footer">
+        <div class="container">
+            <button class="btn btn2">Сбросить</button>
+        </div>
+    </div>
 
     <script src="main.js" type="module"></script>
     <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
