--- a/index.html
+++ b/index.html
@@ -26,13 +26,21 @@
             <ul class="menu">
                 <li>
                     <!--Чтобы bullet не отрывалась от названия, тут стоит невидимый пробел между словом и bullet-->
-                    <div>&#9773;⠀Переменная</div>
+                    <div>&#9773;⠀Элемент статического массива</div>
                     <img id="vr" src="variable.svg" width="100" height="70" alt="draw variable">
                 </li>
                 <li>
                     <div>&#9773;⠀Элемент однонаправленного списка</div>
                     <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
                 </li>
+                <li>
+                    <div>&#9773;⠀Элемент дерева</div>
+                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
+                </li>
+                <li>
+                        <div>&#9773;⠀Try</div>
+                        <img id="try" src="try.svg" width="100" height="70" alt="draw tree node">
+                    </li>
             </ul>
         </div>
     </div>
