--- a/index.html
+++ b/index.html
@@ -41,15 +41,27 @@
                             Удаление элемента методом сдвига
                         </li>
                     </ul>
-                    <!--img id="vr" src="variable.svg" width="100" height="70" alt="draw variable"-->
+                    <img id="vr" src="variable.svg" width="100" height="70" alt="draw variable">
                 </li>
                 <li>
                     <div>&#9773;⠀Однонаправленный список</div>
-                    <!--img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable"-->
+                    <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
                 </li>
                 <li>
                     <div>&#9773;⠀Дерево</div>
-                    <!--img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node"-->
+                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
+                </li>
+                <li>
+                    <div>&#9773;⠀Дерево</div>
+                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
+                </li>
+                <li>
+                    <div>&#9773;⠀Дерево</div>
+                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
+                </li>
+                <li>
+                    <div>&#9773;⠀Дерево</div>
+                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
                 </li>
             </ul>
         </div>
