Added info about 1-way list

--- a/index.html
+++ b/index.html
@@ -13,17 +13,19 @@
 </head>
 
 <body>
-    <button id="modalBtn" class="button">Click here</button>
-    <div id="simpleModal" class="modal">
+    <!--button id="modalBtn" class="button">Click here</button-->
+    <div id="list1Modal" class="modal">
         <div class="modal-content">
             <div class="modal-header">
                 <span class="closeBtn">&times;</span>
                 <h2>Modal Header</h2>
             </div>
             <div class="modal-body">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Commodi, maxime consequuntur consequatur
-                    molestias neque pariatur provident recusandae numquam autem quam est voluptatibus laboriosam
-                    delectus at nesciunt praesentium dicta assumenda iusto!</p>
+                <h5>Однонаправленный список</h5>
+                <p>Линейный однонаправленный список — это структура данных, состоящая из элементов одного типа, связанных между собой последовательно посредством указателей.</p>
+                <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
+                <div><button id="editBtn" class="button">Редактировать</button></div>
+                <div><button id="deleteBtn" class="button">Удалить</button></div>
             </div>
             <div class="modal-footer">
                 <h3>Modal footer</h3>
@@ -49,7 +51,7 @@
             <ul class="menu">
                 <li>
                     <!--Чтобы bullet не отрывалась от названия, тут стоит невидимый пробел между словом и bullet-->
-                    <div>&#9773;⠀Cтатический массив</div>
+                    <div><button class="invisibleBtn">&#9773;⠀Cтатический массив</button></div>
                     <ul>
                         <li>
                             Сортировка методом установки
@@ -64,8 +66,8 @@
                     <img id="vr" src="variable.svg" width="100" height="70" alt="draw variable">
                 </li>
                 <li>
-                    <div>&#9773;⠀Однонаправленный список</div>
-                    <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
+                    <div><button id="modalBtn1List" class="button">&#9773;⠀Однонаправленный список</button></div>
+                    <!--img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable"-->
                 </li>
                 <li>
                     <div>&#9773;⠀Дерево</div>
