--- a/index.html
+++ b/index.html
@@ -18,17 +18,16 @@
         <div class="modal-content">
             <div class="modal-header">
                 <span class="closeBtn">&times;</span>
-                <h2>Modal Header</h2>
+                <h2>Однонаправленный список</h2>
             </div>
             <div class="modal-body">
-                <h5>Однонаправленный список</h5>
                 <p>Линейный однонаправленный список — это структура данных, состоящая из элементов одного типа, связанных между собой последовательно посредством указателей.</p>
                 <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
                 <div><button id="editBtn" class="button">Редактировать</button></div>
                 <div><button id="deleteBtn" class="button">Удалить</button></div>
             </div>
             <div class="modal-footer">
-                <h3>Modal footer</h3>
+                <h3> </h3>
             </div>
         </div>
     </div>
@@ -51,7 +50,7 @@
             <ul class="menu">
                 <li>
                     <!--Чтобы bullet не отрывалась от названия, тут стоит невидимый пробел между словом и bullet-->
-                    <div><button class="invisibleBtn">&#9773;⠀Cтатический массив</button></div>
+                    <div><button class="button">&#9773;⠀Cтатический массив</button></div>
                     <ul>
                         <li>
                             Сортировка методом установки
@@ -63,27 +62,22 @@
                             Удаление элемента методом сдвига
                         </li>
                     </ul>
-                    <img id="vr" src="variable.svg" width="100" height="70" alt="draw variable">
+                    <!--img id="vr" src="variable.svg" width="100" height="70" alt="draw variable"-->
                 </li>
                 <li>
                     <div><button id="modalBtn1List" class="button">&#9773;⠀Однонаправленный список</button></div>
                     <!--img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable"-->
-                </li>
-                <li>
-                    <div>&#9773;⠀Дерево</div>
-                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
-                </li>
-                <li>
-                    <div>&#9773;⠀Дерево</div>
-                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
-                </li>
-                <li>
-                    <div>&#9773;⠀Дерево</div>
-                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
-                </li>
-                <li>
-                    <div>&#9773;⠀Дерево</div>
-                    <img id="tree_node" src="tree_node.svg" width="100" height="70" alt="draw tree node">
+                    <ul>
+                        <li>
+                            Сортировка методом установки
+                        </li>
+                        <li>
+                            Сортировка методом пузырька
+                        </li>
+                        <li>
+                            Удаление элемента
+                        </li>
+                    </ul>
                 </li>
             </ul>
         </div>
