--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,75 +8,48 @@
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="menu_style.css" />
     <link rel="stylesheet" href="footer_style.css" />
-    <link rel="stylesheet" href="modal_style.css" />
+    <link rel="stylesheet" href="context_menu.css" />
 </head>
-
 <body>
-    <!--button id="modalBtn" class="button">Click here</button-->
-    <div id="list1Modal" class="modal">
-        <div class="modal-content">
-            <div class="modal-header">
-                <span class="closeBtn">&times;</span>
-                <h2>Однонаправленный список</h2>
-            </div>
-            <div class="modal-body">
-                <p>Линейный однонаправленный список — это структура данных, состоящая из элементов одного типа, связанных между собой последовательно посредством указателей.</p>
-                <img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable">
-                <div><button id="editBtn" class="button">Редактировать</button></div>
-                <div><button id="deleteBtn" class="button">Удалить</button></div>
-            </div>
-            <div class="modal-footer">
-                <h3> </h3>
-            </div>
-        </div>
-    </div>
-
-
+<div class="operator">
     <div id="header">
-        <h1>⠀</h1>
-        <h1>⠀</h1>
-    </div>
-
-    <div id="navigation">
-
+        <h1>Режим обучаемого</h1>
     </div>
 
     <div id="drawing">
-        <div id="outer-dropzone" class="dropzone">
-            <button class="btn btn4">Редактировать</button>
+        <div class="menu-draw">
+            <div class="primitives" id="graph-primitives">
+                <ul class="editor">
+                    <li>
+                        <img id="rectangle" src="pictures1/rect.svg" width="80" height="50" alt="draw variable">
+                    </li>
+                    <li>
+                        <img id="circule" src="pictures1/circ.svg" width="100" height="70" alt="draw variable">
+                    </li>
+                    <li>
+                        <button class="btn btn5" id="qbutton">Готово</button>
+                    </li>
+            </div>
+            <div id="outer-dropzone" class="dropzone"></div>
         </div>
-        <div id="picturesCol">
-            <ul class="menu">
-                <li>
+        <div id="picturesCol1">
+            <ul class="menu" id="available-containers1">
+                <li class="one-container">
                     <!--Чтобы bullet не отрывалась от названия, тут стоит невидимый пробел между словом и bullet-->
-                    <div><button class="button">&#9773;⠀Cтатический массив</button></div>
-                    <ul>
-                        <li>
-                            Сортировка методом установки
-                        </li>
-                        <li>
-                            Сортировка методом пузырька
-                        </li>
-                        <li>
-                            Удаление элемента методом сдвига
-                        </li>
-                    </ul>
-                    <!--img id="vr" src="variable.svg" width="100" height="70" alt="draw variable"-->
+                    <div>&#9773;⠀Переменная</div>
+                    <img src="pictures1/variable.svg" width="100" height="70" alt="draw variable">
                 </li>
-                <li>
-                    <div><button id="modalBtn1List" class="button">&#9773;⠀Однонаправленный список</button></div>
-                    <!--img id="one_list" src="stack_queue.svg" width="100" height="70" alt="draw variable"-->
-                    <ul>
-                        <li>
-                            Сортировка методом установки
-                        </li>
-                        <li>
-                            Сортировка методом пузырька
-                        </li>
-                        <li>
-                            Удаление элемента
-                        </li>
-                    </ul>
+                <li class="one-container">
+                    <div>&#9773;⠀Однонаправленный список</div>
+                    <img src="pictures1/stack_queue.svg" width="100" height="70" alt="draw variable">
+                </li>
+                <li class="one-container">
+                    <div>&#9773;⠀Дерево</div>
+                    <img src="pictures1/tree_node.svg" width="100" height="70" alt="draw tree node">
+                </li>
+                <li class="one-container">
+                    <div>&#9773;⠀Массив</div>
+                    <img src="pictures1/try.svg" width="100" height="70" alt="draw array element">
                 </li>
             </ul>
         </div>
@@ -86,13 +58,9 @@
     <div id="footer">
         <div class="container">
             <button class="btn btn2">Сбросить</button>
-            <button class="btn btn4" id="op_button">Выйти из режима оператора</button>
+            <button class="btn btn4" id="op_button"> <a href="operator.html" class="btn-ref">Войти в режим оператора</a></button>
         </div>
     </div>
-
-    <script src="main.js" type="module"></script>
-    <script src="modal.js" type="module"></script>
-    <script src="https://unpkg.com/interactjs/dist/interact.min.js"></script>
+</div>
 </body>
-
 </html>
