Added new primitives for constructor

--- a/operator.html
+++ b/operator.html
@@ -25,10 +25,34 @@
                 <div class="primitives" id="graph-primitives">
                     <ul class="editor">
                         <li>
-                            <img id="rectangle" src="pictures1/rect.svg" width="80" height="50" alt="draw variable">
+                            <img id="rectangle" src="pictures1/rect.svg" width="80" height="50" alt="draw rectangle">
                         </li>
                         <li>
-                            <img id="circule" src="pictures1/circ.svg" width="100" height="70" alt="draw variable">
+                            <img id="circule" src="pictures1/circ.svg" width="100" height="70" alt="draw circle">
+                        </li>
+                        <li>
+                            <img id="right_arrow" src="pictures1/right_arrow.svg" width="100" height="70" alt="draw right arrow">
+                        </li>
+                        <li>
+                            <img id="left_arrow" src="pictures1/left_arrow.svg" width="100" height="70" alt="draw left arrow">
+                        </li>
+                        <li>
+                            <img id="left_down_arrow" src="pictures1/left_down_arrow.svg" width="100" height="70" alt="draw left down arrow">
+                        </li>
+                        <li>
+                            <img id="right_down_arrow" src="pictures1/right_down_arrow.svg" width="100" height="70" alt="draw right down arrow">
+                        </li>
+                        <li>
+                            <img id="stack_queue_without_arrow" src="pictures1/stack_queue_without_arrow.svg" width="100" height="70" alt="draw stack/queue without arrow">
+                        </li>
+                        <li>
+                            <img id="tree_node" src="pictures1/tree_node.svg" width="100" height="70" alt="draw tree_node">
+                        </li>
+                        <li>
+                            <img id="rectangle" src="pictures1/rectangle.svg" width="100" height="70" alt="draw variable">
+                        </li>
+                        <li>
+                            <img id="array" src="pictures1/try.svg" width="100" height="70" alt="draw array element">
                         </li>
                         <li>
                             <button class="btn btn5" id="qbutton">Готово</button>
