Fixed modal body

--- a/operator.html
+++ b/operator.html
@@ -127,10 +127,10 @@
                 <h2>Добавить структуру данных</h2>
             </div>
             <div class="modal-body">
-                <div class="hint">Название контейнера</div>
-                <input class="input-str" id="str-inp1" type="text">
-                <div class="hint">Описание</div>
-                <input class="input-str" id="str-inp2" type="text">
+                <div class="hint" id="struct-name">Название контейнера</div>
+                <input class="input-str" id="str-inp-name" type="text">
+                <div class="hint" id="struct-info">Описание</div>
+                <textarea name="Text1" cols="40" rows="10" class="input-str" id="str-inp-info"></textarea>
                 <btn class="confirm" id="conf">OK</btn>
             </div>
             <div class="modal-footer">
