--- a/login.html
+++ b/login.html
@@ -1,4 +1,4 @@
-<form action="include/check.php" method="post">
+<form action="operator.php" method="post">
     <input type="text" name="login" />
     <input type="password" name="password" />
     <input type="submit" value="Enter" name="log_in">
