--- a/login.html
+++ b/login.html
@@ -1,5 +1,23 @@
-<form action="operator.php" method="post">
-    <input type="text" name="login" />
-    <input type="password" name="password" />
-    <input type="submit" value="Enter" name="log_in">
-</form>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login</title>
+    <link rel="stylesheet" href="login_form.css"/>
+</head>
+<body>
+    <form action="operator.php" method="post" class="login-box">
+        <h1>Login</h1>
+        <div class="textbox">
+            <i class="fa fa-user" aria-hidden="true"></i>
+            <input type="text" name="login"/>
+        </div>
+        <div class="textbox">
+            <i class="fa fa-lock" aria-hidden="true"></i>
+            <input type="password" name="password"/>
+        </div>
+        <input type="submit" value="Enter" name="log_in">
+    </form>
+</body>
+</html>
