--- a/login.html
+++ b/login.html
@@ -7,17 +7,17 @@
     <link rel="stylesheet" href="login_form.css"/>
 </head>
 <body>
-    <form action="operator.php" method="post" class="login-box">
+    <form action="operator.php" method="post" class="login-box noselect">
         <h1>Login</h1>
         <div class="textbox">
             <i class="fa fa-user" aria-hidden="true"></i>
-            <input type="text" name="login"/>
+            <input type="text" name="login" id="login-username"/>
         </div>
         <div class="textbox">
             <i class="fa fa-lock" aria-hidden="true"></i>
             <input type="password" name="password"/>
         </div>
-        <input type="submit" value="Enter" name="log_in">
+        <input type="submit" value="Sign in" name="log_in" id="login_btn">
     </form>
 </body>
 </html>
